public static class AnimatorDavidController
{
    public static class Params
    {
        public const string Hit = nameof(Hit);
        public const string FreezeOn = nameof(FreezeOn);
        public const string FreezeOff = nameof(FreezeOff);
        public const string Victory = nameof(Victory);
        public const string GetHammer = nameof(GetHammer);
    }

    public static class States
    {
        public const string Idle = "Base Layer.Idle";
        public const string Hit = "Base Layer.Hit";
        public const string Victory = "Base Layer.Victory";
    }
}